--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-typescript": "^3.1.3",
     "mocha": "^3.2.0",
     "ts-node": "^1.7.0",
